--- a/modelo simples de site/style.css
+++ b/modelo simples de site/style.css
@@ -1,3 +1,7 @@
+body {
+	font-family: 'Montserrat', sans-serif;
+}
+
 header {
 	background: #BBBBBB;
 	padding: 20px 0;
@@ -90,83 +94,10 @@ footer {
 	margin: 20px 0 0;
 }
 
-/* Página de contato */
-.contato {
-	width: 940px;
-	margin: 40px auto;
-}
-
-.contato label,
-.input-group legend {
-	display: block;
-	margin: 0 0 5px;
-	font-size: 20px;
-}
-
-.campo-padrao,
-textarea {
-	display: block;
-	margin: 0 0 30px;
-	padding: 10px 20px;
-	width: 50%;
-	border: 1px solid #aaa;
-}
-
-.input-group {
-	margin: 0 0 20px;
-}
-
-.newsletter {
-	margin: 0 0 20px;
-}
-
-.botao {
-	margin: 20px 0 0;
-	width: 30%;
-	padding: 10px 20px;
-	font-size: 24px;
-	display: inline-block;
-	background: orange;
-	color: white;
-	border: none;
-	border-radius: 5px;
-	transition: 1s;
-}
-
-.botao:hover {
-	cursor: pointer;
-	transform: scale(1.2);
-}
-
-.funcionamento {
-	width: 940px;
-	margin: 0 auto 40px;
-}
-
-table {
-	margin: 10px 0 0;
-}
-
-th {
-	background: #777777;
-	color: #FFFFFF;
-}
-
-
-td,
-th {
-	border: 1px solid #000000;
-	padding: 5px 20px;
-}
-
-main {
-	width: 940px;
-	margin: 0 auto;
-
-}
+main {}
 
 form {
-	margin: 40px 0
+	margin: 40px 0;
 }
 
 form label,
@@ -206,19 +137,140 @@ form legend {
 }
 
 table {
-	margin: 20px 0 40px
+	margin: 20px 0 40px;
 }
 
 thead {
 	background: #555555;
 	color: white;
 	font-weight: bold;
-
 }
 
 td,
 th {
 	border: 1px solid #000000;
 	padding: 8px 15px;
+}
 
+/* css da pagina inicial  */
+.banner {
+	width: 100%;
+}
+
+.titulo-principal {
+	text-align: center;
+	font-size: 2em;
+	margin: 0 0 1em;
+	clear: left;
+}
+
+.principal {
+	padding: 3em 0;
+	background: #FEFEFE;
+	width: 940px;
+	margin: 0 auto;
+}
+
+.principal p {
+	margin: 0 0 1em;
+}
+
+.principal strong {
+	font-weight: bold;
+}
+
+.principal em {
+	font-style: italic;
+}
+
+.utensilios {
+	width: 120px;
+	float: left;
+	margin: 0 20px 20px 0;
+}
+
+.mapa {
+	padding: 3em 0;
+	background: linear-gradient(#FEFEFE, #888888);
+}
+
+.mapa p {
+	margin: 0 0 2em;
+	text-align: center;
+}
+
+.mapa-conteudo {
+	width: 940px;
+	margin: 0 auto;
+}
+
+.beneficios {
+	padding: 3em 0;
+	background: #888;
+}
+
+.conteudo-beneficios {
+	width: 640px;
+	margin: 0 auto;
+}
+
+.lista-beneficios {
+	width: 40%;
+	display: inline-block;
+	vertical-align: top;
+}
+
+.itens {
+	line-height: 1.5;
+}
+
+.itens:first-child {
+	font-weight: bold;
+
+}
+
+.itens:before {
+	content: "★";
+}
+
+.imagembeneficios {
+	width: 60%;
+	opacity: 1;
+	transition: 400;
+	box-shadow: 10px 10px 10px 0 #000000;
+}
+
+.imagembeneficios:hover {
+	opacity: 0.3;
+}
+
+.video {
+	width: 560px;
+	margin: 2em auto;
+
+}
+
+@media screen and (max-width: 480px) {
+
+	.caixa,
+	.principal,
+	.conteudo-beneficios,
+	.mapa-conteudo,
+	.video {
+		width: auto;
+	}
+
+	h1 {
+		text-align: center;
+	}
+
+	nav {
+		position: static;
+
+	}
+
+	.lista-beneficios,
+	.imagembeneficios {
+		width: 100%;
+	}
 }
